--- a/gb/23/2/16/n13931417.md
+++ b/gb/23/2/16/n13931417.md
@@ -1,63 +1,52 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>特斯拉召回逾36万辆车 警告软件或导致车祸</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/06/id13755219-GettyImages-1391532337-600x400.jpg" />
 <h6>特斯拉正在召回超过36.2万辆汽车。图为2022年4月14日，在加利福尼亚州帕萨迪纳市（Pasadena）的一个特斯拉汽车充电站。(Mario Tama/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年02月17日讯】（大纪元记者李馨综合报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">特斯拉</a>（Tesla）正在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%AC%E5%9B%9E.md#1">召回</a>超过36.2万辆汽车，原因是担心其推出的实验性自动驾驶<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BD%AF%E4%BB%B6.md#1">软件</a>可能导致<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BD%A6%E7%A5%B8.md#1">车祸</a>。召回通知称，该公司将向汽车提供无线软件更新，以解决这些问题。</p>
-<p>美国国家公路交通安全管理局（NHTSA）周三（2月15日）在其网站上发文说，这家电动汽车公司正在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%AC%E5%9B%9E.md#1">召回</a>多达362,758辆汽车，包括2016年至2023年的某些S型（Model S）和X型（Model X）汽车，2017年至2023年的3型（Model 3）汽车，以及2020年至2023年的Y型（Model Y）汽车，这些汽车配备了全自动驾驶测试版（Full Self-Driving Beta，简称FSD Beta）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BD%AF%E4%BB%B6.md#1">软件</a>或准备配备该软件。</p>
-<p>根据NHTSA的这份安全召回报告，FSD Beta系统可能会导致<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%BD%A6%E7%A5%B8.md#1">车祸</a>，因为它允许受影响的车辆“在十字路口周围做出不安全的行为，例如在只允许转弯的车道上直接穿过十字路口，在没有完全停止的情况下进入由停车标志控制的十字路口，或者在黄色交通信号灯稳定的情况下进入十字路口，缺乏应有的谨慎”。</p>
+	<p>【大纪元2023年02月17日讯】（大纪元记者李馨综合报导）特斯拉（Tesla）正在召回超过36.2万辆汽车，原因是担心其推出的实验性自动驾驶软件可能导致车祸。召回通知称，该公司将向汽车提供无线软件更新，以解决这些问题。</p>
+<p>美国国家公路交通安全管理局（NHTSA）周三（2月15日）在其网站上发文说，这家电动汽车公司正在召回多达362,758辆汽车，包括2016年至2023年的某些S型（Model S）和X型（Model X）汽车，2017年至2023年的3型（Model 3）汽车，以及2020年至2023年的Y型（Model Y）汽车，这些汽车配备了全自动驾驶测试版（Full Self-Driving Beta，简称FSD Beta）软件或准备配备该软件。</p>
+<p>根据NHTSA的这份安全召回报告，FSD Beta系统可能会导致车祸，因为它允许受影响的车辆“在十字路口周围做出不安全的行为，例如在只允许转弯的车道上直接穿过十字路口，在没有完全停止的情况下进入由停车标志控制的十字路口，或者在黄色交通信号灯稳定的情况下进入十字路口，缺乏应有的谨慎”。</p>
 <p>该通知称，FSD Beta系统也可能难以对“限速变化”做出适当反应。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">特斯拉</a>将发布免费软件更新，并在4月15日之前发函通知所召回车辆的车主。</p>
+<p>特斯拉将发布免费软件更新，并在4月15日之前发函通知所召回车辆的车主。</p>
 <p>特斯拉首席执行官埃隆?马斯克（Elon Musk）周四在推特上表示，使用“召回”一词来描述这种情况是不正确的。</p>
 <p>“用‘召回’这个词来形容无线软件更新是不合时宜的，而且是完全错误的！”他说。</p>
 <p>只有在汽车上安装了该公司高级FSD驾驶辅助系统的特斯拉车主才能加入FSD Beta项目。车主必须获得较高的驾驶安全分数——这是由监测其驾驶习惯的特斯拉软件决定的，而且还要保持这一分数。</p>
 <p>FSD Beta可以最好地被概括为一系列尚未完全调试的新功能，其最吸引人的是“城市街道上的自动驾驶”，可以让特斯拉汽车在复杂的城市环境中自动导航，即使并不完美。</p>
 <p>责任编辑：林妍#</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958826.md#1">营销总监为神韵着迷 感谢神韵艺术家的付出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958855.md#1">企业家二度观神韵 “感谢艺术家的奉献”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958857.md#1">医生带孩子看神韵 想了解更多中国文化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958860.md#1">瑜伽馆老板：神韵传递重要的信息</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958880.md#1">画家赞神韵“唤起人的善念”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958881.md#1">神韵以艺术揭露中共迫害 诊所老板赞佩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/10/n13926826.md#1">特斯拉Model Y和Model 3   成为2022年加州最畅销车辆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/11/n13927410.md#1">特斯拉方向盘掉落 新泽西车主获退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/14/n13929751.md#1">特斯拉再次调整美国售价 今年以来第四次</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/15/n13930588.md#1">特斯拉：将向其它品牌电动车开放充电网络</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/14/n10715065.md#1" target="_blank">古玉文：公安局长卧底校长 百名少年惨成右派</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/18/n11729917.md#1" target="_blank">袁斌：“南京事件”与所谓“四一二反革命政变”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/19/n13953674.md#1">春分一刻千金难买 你要知道的春分大小事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952068.md#1">前蜀异人精通异术 预测他人命数奇准</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955636.md#1">【未解之谜】记忆的迷思</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958465.md#1">【新唐人大视野】密谋阻习连任？前上将传判死缓</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958340.md#1">【十字路口】抖音四大风险 台积电护国大解密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957609.md#1">深圳高官孙女：家中存款9位数 “韭菜供的”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957429.md#1">分析：李强上任接连动作 对李克强不利</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957192.md#1">传刘亚洲收数千万政治献金 或被判死缓?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957045.md#1">露营陆综爆造假 陈伟霆等艺人回酒店被拍到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957092.md#1">舒淇新造型显好身材 不节食减肥法引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957867.md#1">胡歌首谈当爸感受：第一次抱女儿很怕碰伤她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957143.md#1">范丞丞与李晨将同框节目 范冰冰再度受关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13957965.md#1">TVB宣布裁员近200人 终止未达预期收视节目</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958305.md#1">蓝莓、豆角农药最多！美12种污染最重蔬果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957337.md#1">奶酪是心脏的死敌？这样的奶酪对身体好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957502.md#1">预防心脏病从生活中做起 注意4个早期征兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957852.md#1">专家建议：远离5类食品 以防脱发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956575.md#1">木制家具经典不败 5优点值得你投资布置居家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/16/n13931417.htm">特斯拉召回逾36万辆车 警告软件或导致车祸</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931417.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/16/n13931417.htm">特斯拉召回逾36万辆车 警告软件或导致车祸</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/2/16/n13931417.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
